2018-xx-xx v0.5007 pjacklam

 * Convert t/02pod.t -> t/release-pod.t.

 * Increment version number.

2017-01-11 v0.5006 pjacklam

 * Fix syntax for required version of Math::BigInt::Lib.

 * Better checking of POD coverage.

 * Sync test files with Math-BigInt-1.999808.

2016-12-13 v0.5005 pjacklam

 * Add more logic to Makefile.PL regarding INSTALLDIRS (CPAN RT #119199
   and #119225).

2016-12-11 v0.5004 pjacklam

 * Fix Makefile.PL so that this module installs over the core version.

 * Sync test files with Math-BigInt-1.999805.

2016-12-03 v0.5003 pjacklam

 * Use ExtUtils::MakeMaker rather than Module::Install in Makefile.PL

 * Add LICENSE file, since the other Math::BigInt-related distributions have
   one.

 * Remove INSTALL file. The information is in the README file.

 * Inform that the TODO file is not up to date.

2016-11-23 v0.5002 pjacklam

 * Sync test files with Math-BigInt-1.999801. Add t/biglog.t and t/bigroot.t
   since these are included in the test suite for the other backend libraries
   (GMP and Pari).

2016-11-17 v0.5001 pjacklam

 * Avoid 'use parent' to retain compatibility with old Perls.

 * Fix incorrect version numbers in the CHANGES file.

 * Trim whitespace.

2016-11-15 v0.5000 pjacklam

 * Sync test files with Math-BigInt-1.999800.

 * Math::BigInt::FastCalc is now a subclass of Math::BigInt::Calc, so remove
   aliases like *Math::BigInt::FastCalc::_xxx = \&Math::BigInt::Calc::_xxx.

 * Use OO-calls rather than function calls.

 * Fix documentation error in Math::BigInt::FastCalc

2016-04-25 v0.42 pjacklam

 * Sync test files with Math-BigInt-1.999719.

2016-04-22 v0.41 pjacklam

 * Sync test files with Math-BigInt-1.999718.

2016-01-03 v0.40 pjacklam

 * Sync test files with Math-BigInt-1.999714.

2015-12-31 v0.39 pjacklam

 * Sync test files with Math-BigInt-1.999713.

2015-12-02 v0.38 pjacklam

 * Use 'static double', not just 'double' in FastCalc.xs.

 * Move 'Test::More' from 'build_requires' to 'test_requires' in Makefile.PL.
