@@ -1,5 +1,12 @@
 #!perl
 
+BEGIN {
+    unless ($ENV{RELEASE_TESTING}) {
+        print "1..0 # SKIP these tests are for release candidate testing";
+        exit;
+    }
+}
+
 use strict;                     # restrict unsafe constructs
 use warnings;                   # enable optional warnings
 
