@@ -1,5 +1,7 @@
 2018-xx-xx v0.5007 pjacklam
 
+ * Convert t/03podcov.t -> t/release-pod-coverage.t.
+
  * Convert t/02pod.t -> t/release-pod.t.
 
  * Increment version number.
